# cpp_capstone_project

./: CMakeLists.txt  README.md
src/: app_gui.cpp  app_gui.h  dialog.cpp  dialog.h  stack.cpp  stack.h
